--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -529,10 +529,7 @@ nav form {
 
 .fontside {
     color: #fff;
-    background: -webkit-linear-gradient(110deg, #a60af3 40%, rgba(0, 0, 0, 0) 30%), -webkit-radial-gradient(farthest-corner at 0% 0%, #7a00cc 70%, #c03fff 70%);
-    background: -o-linear-gradient(110deg, #a60af3 40%, rgba(0, 0, 0, 0) 30%), -o-radial-gradient(farthest-corner at 0% 0%, #7a00cc 70%, #c03fff 70%);
-    background: -moz-linear-gradient(110deg, #a60af3 40%, rgba(0, 0, 0, 0) 30%), -moz-radial-gradient(farthest-corner at 0% 0%, #7a00cc 70%, #c03fff 70%);
-    background: linear-gradient(110deg, #a60af3 40%, rgba(0, 0, 0, 0) 30%), radial-gradient(farthest-corner at 0% 0%, #7a00cc 70%, #c03fff 70%);
+    background-color: #7a00cc;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -1194,9 +1191,9 @@ nav form {
     /* background-color: rgb(251, 209, 117);
     background-color: rgba(248, 211, 141, 0.4); */
     background: -webkit-linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%);
-    background: -o-linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%);
+    /* background: -o-linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%);
     background: -moz-linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%);
-    background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%);
+    background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%); */
     color: black;
     text-shadow: -2px 2px #ffffff;
 
