--- a/assets/css/join now.css
+++ b/assets/css/join now.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
 * {
@@ -90,6 +89,16 @@ input {
     width: 100%;
 }
 
+input:valid,
+select:valid {
+    border: 2px solid green;
+}
+
+input:invalid,
+select:invalid {
+    border: 2px solid red;
+}
+
 .container {
     background-color: #fff;
     border-radius: 10px;
@@ -170,7 +179,7 @@ input {
 
 .overlay {
     background: #ffb641;
-    
+
     background: linear-gradient(to right, #f8860c, #fa970c);
     background-repeat: no-repeat;
     background-size: cover;
