--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,6 +54,8 @@ body::-webkit-scrollbar {
     display: flex;
     justify-content: space-between;
     padding: 0;
+    position: sticky;
+    top: 0;
 }
 
 .topic h1 {
@@ -789,6 +791,197 @@ nav form {
     margin-top: 10px; */
 
 }
+.lists1 .card {
+    position: relative;
+    width: 300px;
+    height: 450px;
+    background: #232323;
+    border-radius: 20px;
+    overflow: hidden;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 50px;
+}
+
+.lists1 .card:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #d5f69c;
+    clip-path: circle(150px at 80% 20%);
+    transition: 0.5s ease-in-out;
+}
+
+.lists1 .card:hover:before {
+    clip-path: circle(300px at 80% -20%);
+}
+
+.lists1 .card:after {
+    content: 'MINISTERS';
+    position: absolute;
+    top: 50%;
+    left: -20%;
+    font-size: 5em;
+    font-weight: 800;
+    font-style: italic;
+    color: rgba(255, 255, 25, 0.05)
+}
+
+.lists1 .card .imgBx {
+    position: absolute;
+    top: 40%;
+    transform: translateY(-50%);
+    z-index: 10000;
+    width: 100%;
+    height: 220px;
+    transition: 0.5s;
+}
+
+.lists1 .card:hover .imgBx {
+    top: 0%;
+    transform: translateY(0%);
+    z-index: 1;
+
+}
+
+.lists1 .card .imgBx img {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0deg);
+    width: 230px;
+    height: 250px;
+    border-radius: 10px;
+
+}
+
+.lists1 .card .contentBx {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    transition: 1s;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.lists1 .card:hover .contentBx {
+    height: 210px;
+}
+
+.lists1 .card .contentBx p {
+    position: relative;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: #fff;
+    margin-top: 10px;
+    /* padding-top: 20px; */
+}
+
+.lists1 .card .contentBx .size,
+.lists1 .card .contentBx .color {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 20px;
+    transition: 0.5s;
+    opacity: 0;
+    visibility: hidden;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.lists1 .card:hover .contentBx .size {
+    opacity: 1;
+    visibility: visible;
+    transition-delay: 0.5s;
+}
+
+.lists1 .card:hover .contentBx .color {
+    opacity: 1;
+    visibility: visible;
+    transition-delay: 0.6s;
+}
+
+.lists1 .card .contentBx .size h3,
+.lists1 .card .contentBx .color h3 {
+    color: #fff;
+    font-weight: 300;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-right: 10px;
+}
+
+/* .lists1 .card .contentBx .size span {
+    width: 26px;
+    height: 26px;
+    text-align: center;
+    line-height: 26px;
+    font-size: 14px;
+    display: inline-block;
+    color: #111;
+    background: #fff;
+    margin: 0 5px;
+    transition: 0.5s;
+    color: #111;
+    border-radius: 4px;
+    cursor: pointer;
+} */
+
+/* .lists1 .card .contentBx .size span:hover {
+    background: #9bdc28;
+} */
+
+/* .lists1 .card .contentBx .color span {
+    width: 20px;
+    height: 20px;
+    background: #ff0;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+} */
+
+/* .container .card .contentBx .color span:nth-child(2){
+    background: #9bdc28;
+  }
+  
+  .container .card .contentBx .color span:nth-child(3){
+    background: #03a9f4;
+  }
+  
+  .container .card .contentBx .color span:nth-child(4){
+    background: #e91e63;
+  } */
+
+.lists1 .card .contentBx a {
+    display: inline-block;
+    padding: 10px 20px;
+    background: #fff;
+    border-radius: 4px;
+    margin-top:10px;
+    text-decoration: none;
+    font-weight: 600;
+    color: #111;
+    opacity: 0;
+    transform: translateY(50px);
+    transition: 0.5s;
+}
+
+.lists1 .card:hover .contentBx a {
+    opacity: 1;
+    transform: translateY(0px);
+    transition-delay: 0.75s;
+
+}
 
 
 /* profile page */
@@ -1148,7 +1341,7 @@ nav form {
 .pastleaders h1 {
     padding: 40px;
     text-align: center;
-    text-decoration: underline double orange;
+    /* text-decoration: underline double orange; */
 }
 
 .pastleaders table td {
@@ -1182,11 +1375,13 @@ nav form {
 }
 
 #pastleader p {
-    background-color: rgb(241, 207, 114);
-    background-color: rgba(253, 167, 75, 0.4);
+    /* background-color: rgb(241, 207, 114); */
+    /* background-color: rgba(253, 167, 75, 0.4); */
     /* background-color: rgb(251, 209, 117);
     background-color: rgba(248, 211, 141, 0.4); */
-    background-color:#ffed4b;
+    /* background-color:#ffed4b; */
+    /* background-image: url("../images/icons/logo.png"); */
+
     /* background: -o-linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%);
     background: -moz-linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%);
     background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%); */
@@ -1968,194 +2163,4 @@ td .name-img {
     position: relative;
   } */
 
-  .lists1 .card {
-    position: relative;
-    width: 300px;
-    height: 450px;
-    background: #232323;
-    border-radius: 20px;
-    overflow: hidden;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 50px;
-}
-
-.lists1 .card:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #d5f69c;
-    clip-path: circle(150px at 80% 20%);
-    transition: 0.5s ease-in-out;
-}
-
-.lists1 .card:hover:before {
-    clip-path: circle(300px at 80% -20%);
-}
-
-.lists1 .card:after {
-    content: 'MINISTERS';
-    position: absolute;
-    top: 50%;
-    left: -20%;
-    font-size: 5em;
-    font-weight: 800;
-    font-style: italic;
-    color: rgba(255, 255, 25, 0.05)
-}
-
-.lists1 .card .imgBx {
-    position: absolute;
-    top: 40%;
-    transform: translateY(-50%);
-    z-index: 10000;
-    width: 100%;
-    height: 220px;
-    transition: 0.5s;
-}
-
-.lists1 .card:hover .imgBx {
-    top: 0%;
-    transform: translateY(0%);
-    z-index: 1;
-
-}
-
-.lists1 .card .imgBx img {
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(0deg);
-    width: 230px;
-    height: 250px;
-    border-radius: 10px;
-
-}
-
-.lists1 .card .contentBx {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    text-align: center;
-    transition: 1s;
-    z-index: 10;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.lists1 .card:hover .contentBx {
-    height: 210px;
-}
-
-.lists1 .card .contentBx p {
-    position: relative;
-    font-weight: 600;
-    letter-spacing: 1px;
-    color: #fff;
-    margin-top: 10px;
-    /* padding-top: 20px; */
-}
-
-.lists1 .card .contentBx .size,
-.lists1 .card .contentBx .color {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 20px;
-    transition: 0.5s;
-    opacity: 0;
-    visibility: hidden;
-    padding-top: 8px;
-    padding-bottom: 8px;
-}
-
-.lists1 .card:hover .contentBx .size {
-    opacity: 1;
-    visibility: visible;
-    transition-delay: 0.5s;
-}
-
-.lists1 .card:hover .contentBx .color {
-    opacity: 1;
-    visibility: visible;
-    transition-delay: 0.6s;
-}
-
-.lists1 .card .contentBx .size h3,
-.lists1 .card .contentBx .color h3 {
-    color: #fff;
-    font-weight: 300;
-    font-size: 14px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-right: 10px;
-}
-
-/* .lists1 .card .contentBx .size span {
-    width: 26px;
-    height: 26px;
-    text-align: center;
-    line-height: 26px;
-    font-size: 14px;
-    display: inline-block;
-    color: #111;
-    background: #fff;
-    margin: 0 5px;
-    transition: 0.5s;
-    color: #111;
-    border-radius: 4px;
-    cursor: pointer;
-} */
-
-/* .lists1 .card .contentBx .size span:hover {
-    background: #9bdc28;
-} */
-
-/* .lists1 .card .contentBx .color span {
-    width: 20px;
-    height: 20px;
-    background: #ff0;
-    border-radius: 50%;
-    margin: 0 5px;
-    cursor: pointer;
-} */
-
-/* .container .card .contentBx .color span:nth-child(2){
-    background: #9bdc28;
-  }
   
-  .container .card .contentBx .color span:nth-child(3){
-    background: #03a9f4;
-  }
-  
-  .container .card .contentBx .color span:nth-child(4){
-    background: #e91e63;
-  } */
-
-.lists1 .card .contentBx a {
-    display: inline-block;
-    padding: 10px 20px;
-    background: #fff;
-    border-radius: 4px;
-    margin-top:10px;
-    text-decoration: none;
-    font-weight: 600;
-    color: #111;
-    opacity: 0;
-    transform: translateY(50px);
-    transition: 0.5s;
-}
-
-.lists1 .card:hover .contentBx a {
-    opacity: 1;
-    transform: translateY(0px);
-    transition-delay: 0.75s;
-
-}
