--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -55,7 +55,7 @@ body::-webkit-scrollbar {
     justify-content: space-between;
     padding: 0;
     position: sticky;
-    top: 0;
+    bottom: 15%;
 }
 
 .topic h1 {
@@ -538,8 +538,8 @@ nav form {
 }
 
 .fontside {
-    color: #fff;
-    background-color: #7a00cc;
+    color: black;
+    background-color: #C9DFF2;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -561,12 +561,12 @@ nav form {
     background: -o-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
     background: -moz-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
     background: linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%); */
-    color: #ffffff;
+    color: black;
     /* height: 50px; */
     /* padding: 10px; */
     margin: 0%;
     width: 100%;
-    text-shadow: -2px 2px black;
+    /* text-shadow: -2px 2px black; */
 }
 
 .fontside .para {
@@ -586,7 +586,7 @@ nav form {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    background-color: #B1B2FF;
+    background-color: #F2F2F2;
     transform: rotatey(180deg);
     color: black;
     text-shadow: -2px 2px #ffffff;
@@ -756,7 +756,7 @@ nav form {
 
 
 /* join box */
-.joinbox {
+/* .joinbox {
     width: 60%;
     height: 250px;
     box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
@@ -766,7 +766,7 @@ nav form {
     align-items: center;
     margin-left: 20%;
     background-color: #D2DAFF;
-}
+} */
 
 .joinbox h1 {
     /* font-size: 52px;
@@ -814,7 +814,8 @@ nav form {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #d5f69c;
+    /* background: #dbe9c3; */
+    background: #ffffff1A;
     clip-path: circle(150px at 80% 20%);
     transition: 0.5s ease-in-out;
 }
@@ -1035,8 +1036,7 @@ nav form {
 
 .profile-nav {
     margin: 5% 0 0 5%;
-    box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
-    width: 300px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     height: 300px;
     background-color: #e1f5e1;
 
@@ -1052,10 +1052,10 @@ nav form {
     display: flex;
     flex-direction: column;
     /* width: 90%; */
-    height: 400px;
+    /* height: 400px; */
     /* margin: 4% 0 0 5%; */
     line-height: 1.5;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 .cmcontent::-webkit-scrollbar {
@@ -1279,7 +1279,7 @@ nav form {
 .complete .rules {
     width: 90%;
     height: auto;
-    box-shadow: 4px 3px 20px -2px rgba(16, 52, 107, 1);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     margin-top: 50px;
     background-color: black;
 
@@ -1511,7 +1511,7 @@ nav form {
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 10px;
 }
 
@@ -1544,7 +1544,7 @@ nav form {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    box-shadow: 0px 2px 24px 5px rgba(0, 0, 0, 0.75);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     border-radius: 10px;
 }
 
@@ -1634,8 +1634,7 @@ td .name-img {
 /* start opinion queistion page */
 .opinionpoll {
     width: 80%;
-    box-shadow: 4px 3px 20px -2px rgba(16, 52, 107, 1);
-    margin-left: 10%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;    margin-left: 10%;
     background-color: #e1f5e1;
     min-height: 100%;
 }
