--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,7 +73,7 @@ body::-webkit-scrollbar {
 
 }
 
-.topic1 p a img{
+.topic1 p a img {
     width: 25px;
     height: 25px;
     border: 2px solid orange;
@@ -90,6 +90,10 @@ body::-webkit-scrollbar {
 .topic1 p {
     padding-left: 10px;
 
+}
+.navbar .topic1 p .nav-item{
+    list-style: none;
+    text-decoration: overline;
 }
 
 
@@ -555,7 +559,7 @@ nav form {
 }
 
 .fontside p {
- 
+
     text-align: center;
     /* background: -webkit-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
     background: -o-linear-gradient(70deg, #ff6464 40%, #5ac8fa 40%);
@@ -793,18 +797,24 @@ nav form {
     margin-top: 10px; */
 
 }
+
 .lists1 .card {
-    position: relative;
+     position: relative;
     width: 300px;
     height: 450px;
     background: #232323;
     border-radius: 20px;
-    overflow: hidden;
     z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin: 50px;
+    margin: 50px; 
+    /* margin: 40px; */
+    /* display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
+    grid-gap: 5rem;
+    padding: 5rem; */
+    /* background: #F5F7FA; */
 }
 
 .lists1 .card:before {
@@ -843,6 +853,7 @@ nav form {
     width: 100%;
     height: 220px;
     transition: 0.5s;
+    overflow: hidden;
 }
 
 .lists1 .card:hover .imgBx {
@@ -874,6 +885,7 @@ nav form {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+
 }
 
 .lists1 .card:hover .contentBx {
@@ -924,65 +936,27 @@ nav form {
     margin-right: 10px;
 }
 
-/* .lists1 .card .contentBx .size span {
-    width: 26px;
-    height: 26px;
-    text-align: center;
-    line-height: 26px;
-    font-size: 14px;
-    display: inline-block;
-    color: #111;
-    background: #fff;
-    margin: 0 5px;
-    transition: 0.5s;
-    color: #111;
-    border-radius: 4px;
-    cursor: pointer;
-} */
-
-/* .lists1 .card .contentBx .size span:hover {
-    background: #9bdc28;
-} */
-
-/* .lists1 .card .contentBx .color span {
-    width: 20px;
-    height: 20px;
-    background: #ff0;
-    border-radius: 50%;
-    margin: 0 5px;
-    cursor: pointer;
-} */
-
-/* .container .card .contentBx .color span:nth-child(2){
-    background: #9bdc28;
-  }
-  
-  .container .card .contentBx .color span:nth-child(3){
-    background: #03a9f4;
-  }
-  
-  .container .card .contentBx .color span:nth-child(4){
-    background: #e91e63;
-  } */
-
 .lists1 .card .contentBx a {
     display: inline-block;
     padding: 10px 20px;
     background: #fff;
     border-radius: 4px;
-    margin-top:10px;
+    margin-top: 10px;
     text-decoration: none;
     font-weight: 600;
     color: #111;
     opacity: 0;
     transform: translateY(50px);
     transition: 0.5s;
+    overflow: hidden;
 }
 
 .lists1 .card:hover .contentBx a {
     opacity: 1;
     transform: translateY(0px);
     transition-delay: 0.75s;
+    
+
 
 }
 
@@ -999,7 +973,6 @@ nav form {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    /* margin: 5% 0 0 5%; */
     width: 60%;
 }
 
@@ -1634,7 +1607,8 @@ td .name-img {
 /* start opinion queistion page */
 .opinionpoll {
     width: 80%;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;    margin-left: 10%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    margin-left: 10%;
     background-color: #e1f5e1;
     min-height: 100%;
 }
@@ -2164,15 +2138,16 @@ td .name-img {
     position: relative;
   } */
 
-  
 
-  .totalnav #search_result{
+
+.totalnav #search_result {
     width: 50%;
     height: 400px;
     overflow: scroll;
-   margin: 0 20%;
-  }
+    margin: 0 20%;
+    display: none;
+}
 
-  #search_result::-webkit-scrollbar {
+#search_result::-webkit-scrollbar {
     display: none;
 }
