--- a/assets/css/join now.css
+++ b/assets/css/join now.css
@@ -1,5 +1,3 @@
-
-
 * {
     box-sizing: border-box;
 }
@@ -218,15 +216,17 @@ select:invalid {
 
 
 }
-.overlay-left p{
+
+.overlay-left p {
     font-weight: 700;
-    text-shadow:-2px 2px black;
+    text-shadow: -2px 2px black;
 
 
 }
-.overlay-right p{
+
+.overlay-right p {
     font-weight: 700;
-    text-shadow:-2px 2px black;
+    text-shadow: -2px 2px black;
 
 
 }
@@ -265,16 +265,29 @@ select:invalid {
 }
 
 
-@media screen and (max-width:600) {
-    form{
-       width:100%;
+@media screen and (max-width: 600px) {
+    body {
+        font-size: 12px;
+
     }
-    .overlay-container{
+
+    .container {
+        max-width: 100%;
+        margin-top: 15%;
+    }
+
+    .form-container {
+        max-width: 100%;
+        margin: 0;
+    }
+
+    form {
+        padding: 0;
+       
+    }
+
+    #register input {
         width: 100%;
     }
-    input{
-        width: 100%;
-        
-    }
-    
+
 }
