--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -881,24 +881,21 @@ ul {
     display: flex;
     align-items: center;
     justify-content: space-around;
+
 }
 
 .headprofile {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    flex-wrap: wrap;
     /* width: 60%; */
-}
-
-.headprofile .cm-image img {
-    width: 400px;
-    height: 600px;
-    border-radius: 10px;
 }
 
 .headprofile .cm-name p {
     font-size: 22px;
-    line-height: 4;
+    line-height: 3.5;
+    margin-left: 20%;
 }
 
 
@@ -938,9 +935,9 @@ ul {
 .cmcontent {
     display: flex;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
     height: 400px;
-    margin: 4% 0 0 5%;
+    margin: 4% 0 0 10%;
     line-height: 1.5;
     overflow: scroll;
 }
@@ -1649,11 +1646,6 @@ td .name-img {
         margin: 10px 0 0 0;
     }
 
-    .footer {
-        display: none;
-        /* flex-direction: column; */
-    }
-
     /* total parties */
 
     .totalparties {
@@ -1694,8 +1686,9 @@ td .name-img {
     }
 
     /* profile */
+  
     .headprofile {
-        margin: 0;
+        margin-left: 0%;
         display: flex;
         flex-direction: column-reverse;
         width: 100%;
@@ -1704,7 +1697,7 @@ td .name-img {
     }
 
     .cm-name {
-        width: 90%;
+        width: 100%;
         line-height: 2;
     }
 
@@ -1715,10 +1708,13 @@ td .name-img {
     .cm-total-content {
         display: flex;
         flex-direction: column;
+        margin-left: 30%;
     }
-
+    .cm-total-content{
+       width: 100%;
+    }
     .cmcontent {
-        margin: 0%;
+        margin-left: 10%;
         width: 100%;
     }
 
@@ -1726,6 +1722,10 @@ td .name-img {
         display: flex;
         flex-direction: column;
     }
+
+
+
+   
 
     /* pastleaders */
 
@@ -1832,7 +1832,7 @@ td .name-img {
 
 }
 
-@media screen and (min-width: 601px) and (max-width:1050px) {
+/* @media screen and (min-width: 601px) and (max-width:1050px) {
 
 
     .section2 .box {
@@ -1896,15 +1896,7 @@ td .name-img {
         margin: 0%;
     }
 
-    /* .piechart {
-        margin: 0%;
-        padding-top: 30px;
-    } */
-
     .totalparties {
-        /* display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr; */
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
@@ -1950,7 +1942,7 @@ td .name-img {
     }
 
 
-}
+} */
 
 .totalnav #search_result {
     width: 50%;
