--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,10 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
 
-/* @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200&display=swap'); */
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Noto Sans Tamil', sans-serif;
-    font-family: 'Kanit', sans-serif;
 
 
 }
@@ -29,114 +26,16 @@ body::-webkit-scrollbar {
     min-width: 100%;
     min-height: 100%;
     z-index: -1;
-    /* filter: blur(2px); */
-}
-
-/* .headvideo1 video {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    z-index: -1;
-} */
-
-/* .headvideo1 {
-    max-height: 100vh;
-} */
-
-/* nav bar start */
-/* .totalnav {
-    height: 110px;
-    width: 100%;
-    position: sticky;
-    z-index: 10;
-    top: 0px;
-    box-shadow: -1px 9px 14px 0px rgba(26, 22, 26, 0.53); */
-/* background-position: center; */
-/* background-size: cover; */
-/* } */
-
-/* .navbar {
-    display: flex;
-    justify-content: space-around;
-    padding: 0;
-    position: sticky;
-    bottom: 15%;
-} */
-
-/* .topic a {
-    text-decoration: none;
-}
-
-.btn-group{
-    margin-right: 10px;
 }
 
 
-.topic h1 {
-    padding: 20px 0 0 40px;
-    font-family: 'Kanit', sans-serif;
-    font-weight: 900;
-    font-size: 25px;
-    color: #FE9227;
-
-}
-
-.topic1 {
-    display: flex;
-    padding: 15px 20px 0 0; */
-/* margin-right: 75px; */
-
-/* } */
-
-/* .topic1 p a img {
-    width: 25px;
-    height: 25px;
-    border: 2px solid orange;
-    border-radius: 5px;
-}
-.topic1 p li .language_menu{
-    width: 50px;
-}
-.topic1 p a {
-    color: black;
-    font-size: 13px;
-    text-decoration: none;
-    font-weight: 500;
-}
-
-.topic1 p {
-    padding-left: 15px;
-
-}
-
-.topic1 .fa {
-    font-size: 20px;
-}
-
-
-.navbar .topic1 p .nav-item {
-    list-style: none;
-    text-decoration: overline;
-}
-
-
-#navbarSupportedContent ul li {
-    font-weight: 900;
-    color: black;
-
-}
-
-nav form {
-    margin-left: 20%;
-} */
 
 .navbar ul li a {
     color: #ffffff;
 }
 
 /* section 1 start */
+
 .section1 {
     min-height: 100vh;
     display: flex;
@@ -597,51 +496,6 @@ ul {
 
 /* portfolio page-------------------------------------------- */
 
-/* .list1 {
-    width: 300px;
-    height: 450px;
-    box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
-    border-radius: 8px;
-    margin-top: 25px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-
-
-}
-
-.list1 img {
-    width: 220px;
-    height: 250px;
-    border-radius: 8px;
-}
-
-.list1 img:hover {
-    transform: scale(1.1);
-    transition: 0.5s;
-}
-
-.list1 p {
-    text-align: start;
-    line-height: 1.5;
-    padding-top: 10px;
-}
-
-.list1 button {
-    padding: 10px;
-    text-align: center;
-    width: 170px;
-    border-radius: 13px;
-    border: none;
-    color: black;
-}
-
-.list1 button:hover {
-    background-color: #B1B2FF;
-    transform: scale(1.1);
-    transition: .2s;
-} */
 
 
 
@@ -655,49 +509,7 @@ ul {
 
 }
 
-/* .list2 {
-    width: 300px;
-    height: 450px;
-    box-shadow: -1px 9px 14px 7px rgba(26, 22, 26, 0.53);
-    margin: 50px;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}
 
-.list2 img {
-    width: 220px;
-    height: 250px;
-    border-radius: 8px;
-}
-
-.list2 img:hover {
-    transform: scale(1.1);
-    transition: 0.5s;
-}
-
-.list2 p {
-    text-align: start;
-    line-height: 1.5;
-    padding-top: 10px;
-}
-
-.list2 button {
-    padding-bottom: 10px;
-    text-align: center;
-    width: 170px;
-    border-radius: 13px;
-    border: none;
-  
-}
-
-.list2 button:hover {
-    background-color: #04D939;
-    transform: scale(1.1);
-    transition: .2s;
-} */
 
 
 .piechart {
@@ -894,6 +706,7 @@ ul {
 
 .headprofile .cm-name p {
     font-size: 22px;
+    width: 400px;
     line-height: 3.5;
     margin-left: 20%;
 }
@@ -1166,6 +979,7 @@ ul {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     margin-top: 50px;
     background-color: black;
+    border-radius: 7px;
 
 }
 
@@ -1227,6 +1041,17 @@ ul {
 .pastleaders h1 {
     padding: 40px;
     text-align: center;
+    font-size: 25px;
+
+    /* text-decoration: underline double orange; */
+}
+
+
+.pastleaders p {
+    padding: 20pxpx;
+    text-align: center;
+    font-size: 15px;
+    
     /* text-decoration: underline double orange; */
 }
 
