--- a/assets/css/leader_profile.css
+++ b/assets/css/leader_profile.css
@@ -62,7 +62,6 @@
 }
 
 #sidebar .list-items li {
-    /* padding-left: 40px;  */
     padding: 0;
     line-height: 50px;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
@@ -76,7 +75,7 @@
     padding: 20px 10px;
 }
 
-#sidebar .list-items li:hover {
+#sidebar .list-items li a:hover {
     border-top: 1px solid transparent;
     border-bottom: 1px solid transparent;
     box-shadow: 0 0px 10px 3px #222;
