--- a/assets/css/parties.css
+++ b/assets/css/parties.css
@@ -1,12 +1,18 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background-color:#f0f8ff;
+
+body {
+    background-color: #f0f8ff;
 
 }
+
+.navbar ul li a {
+    color: #ffffff;
+}
+
 .totalparties {
     width: 90%;
     min-height: 100vh;
@@ -42,7 +48,9 @@ body{
 
 .fontside {
     color: #fff;
-    background: linear-gradient(90deg, rgba(34,0,36,1) 0%, rgba(200,0,255,1) 100%);
+    background-color: #5078f2;
+    background-image: linear-gradient(315deg, #5078f2 0%, #efe9f4 74%);
+
     position: absolute;
     width: 100%;
     height: 100%;
@@ -60,7 +68,7 @@ body{
 .fontside p {
 
     text-align: center;
-    color: #fff;
+    color: black;
     margin: 0%;
     width: 100%;
 }
