--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,4 +1,3 @@
-
 .navbar ul li a {
   color: #ffffff;
 }
@@ -17,10 +16,11 @@
   /* justify-content: space-around; */
   width: 500px;
   border-radius: 5px;
-background: #ffffff;
-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-margin: 2em 0;
-/* border: 2px solid gainsboro; */
+  background: #ffffff;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  margin: 2em 0;
+  height: 320px;
+  /* border: 2px solid gainsboro; */
 }
 
 .main_container .minister_card .minister_image img {
@@ -30,11 +30,11 @@ margin: 2em 0;
   padding: .5em;
 }
 
-.main_container .minister_card .minister_details .details_contents{
- margin: 1em 0 1em 2em;
+.main_container .minister_card .minister_details .details_contents {
+  margin: 1em 0 1em 2em;
 }
 
-.main_container .minister_card .minister_details .details_contents{
+.main_container .minister_card .minister_details .details_contents {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -42,23 +42,23 @@ margin: 2em 0;
   align-items: flex-start;
 }
 
-.main_container .minister_card .minister_details .details_contents .minister_name{
+.main_container .minister_card .minister_details .details_contents .minister_name {
 
   font-size: 1.2rem;
   font-weight: bold;
 }
 
-.main_container .minister_card .minister_details .details_contents .coun_of_minister{
+.main_container .minister_card .minister_details .details_contents .coun_of_minister {
   font-size: 1.1rem;
-    font-weight: 500;
+  font-weight: 500;
 }
 
-.main_container .minister_card .minister_details .details_contents .minister_pos{
+.main_container .minister_card .minister_details .details_contents .minister_pos {
   font-size: 1.1rem;
   font-weight: 600;
 }
 
-.main_container .minister_card .minister_details .details_contents .view_portfolio a{
+.main_container .minister_card .minister_details .details_contents .view_portfolio a {
   text-decoration: none;
   background-color: salmon;
   padding: .5em;
@@ -68,14 +68,18 @@ margin: 2em 0;
   font-size: 1.1em;
 }
 
-.button_div{
+.button_div {
   display: flex;
   justify-content: space-around;
   align-items: center;
 
 }
+.button_div #like_icon:hover{
+color: red;
+}
 
-.button_div #like_icon{
+
+.button_div #like_icon {
   border: none;
   padding: 0 0 20px 30px;
   font-size: 20px;
@@ -93,7 +97,7 @@ margin: 2em 0;
   display: none;
   z-index: 9999;
 
-  
+
 }
 
 #search_result::-webkit-scrollbar {
@@ -126,4 +130,3 @@ margin: 2em 0;
   font-size: 0.9rem;
   margin-top: 0.3em;
 }
-
